Jira CEP4A-101: Registro perfil básico finished

--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -23,7 +23,7 @@ html {position: relative;
 body {margin-bottom: 150px !important;}  
   
 .centered {margin: 0 auto;}
-.center {text-align: center;}
+.center {text-align: center !important;}
 .middle {vertical-align: middle !important;}
 .left {text-align: left !important;}
 .right {text-align: right !important;}
