--- a/SurveyTool/WebContent/css/userPanel.css
+++ b/SurveyTool/WebContent/css/userPanel.css
@@ -185,3 +185,22 @@
 .myprofile-option a:hover {border: 2px solid #23527C;}
 .myprofile-option a i {display: block;}
 .myprofile-link {text-align: right;}
+	
+/*----------------------------------------------*\
+		$HOME
+\*----------------------------------------------*/
+
+.empty-table-div {text-align: center;
+	padding: 100px;}
+.survey-list-row > td > p {padding: 1px 20px;}
+.survey-list-row-deadline {font-weight: bold;
+	padding-left: 5px;}
+.table-progress {width: auto;
+	margin-right: 0px;
+	border: 1px solid #000;
+	margin-bottom: 0 !important;}
+.table-progress > .progress-bar {min-width: 0 !important;}
+.table-progress-bar-success {background-color: #3A723A !important;
+	font-weight: bold !important;
+	font-size: 1.1em !important;}
+ 
