Corregido visualización radiobuttons en alto contraste

--- a/SurveyTool/WebContent/css/survey.css
+++ b/SurveyTool/WebContent/css/survey.css
@@ -3,6 +3,14 @@
 \*----------------------------------------------*/
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Ubuntu');
 
+@font-face {
+  font-family: 'FontAwesome';
+  src: url('../font-awesome/fonts/fontawesome-webfont.eot?v=4.7.0');
+  src: url('../font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.7.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff2?v=4.7.0') format('woff2'), url('../fonts/fontawesome-webfont.woff?v=4.7.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.7.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.7.0#fontawesomeregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .body-content > .container-fluid{
 	padding:0px;
 }
@@ -263,12 +271,31 @@ h1, h2, h3, h4, h5, button, legend {font-family: 'Ubuntu', sans-serif !important
 	opacity:0;
 }
 #form-question .radio label{
-	background:url(../img/radio-off.png) left center no-repeat;
+	/*background:url(../img/radio-off.png) left center no-repeat;*/
 	padding-left:30px;
 }
-#form-question .radio input[type=radio]:checked + label{
-	background: url(../img/radio-on.png) left center no-repeat;
+#form-question .radio input[type=radio]:not(checked) + label:before{
+	/* fa-circle-o */
+	font: normal normal normal 14px/1 FontAwesome;
+	content:'\f10c';
+	color: #016FB8;
+	font-size: 17pt;
+	position:relative;
+	top: .2rem;
 }
+#form-question .radio input[type=radio]:checked + label:before{
+	/* fa-dot-circle-o */
+	font: normal normal normal 14px/1 FontAwesome;
+	content:'\f192';
+	color: #016FB8;
+	font-size: 17pt;
+	position:relative;
+	top: .2rem;
+}
+/*#form-question .radio input[type=radio]:checked + label{
+	
+	background: url(../img/radio-on.png) left center no-repeat;
+}*/
 #form-question .radio input[type=radio]:checked + label span{
 	background-color:#016FB8;
 	color:#fff;
