correccion error labels textos 3.3.3.2, fix parcial de modificar aria-label al crear nueva opcion 3.3.1.2

--- a/SurveyTool/WebContent/css/survey.css
+++ b/SurveyTool/WebContent/css/survey.css
@@ -486,7 +486,7 @@ h1, h2, h3, h4, h5, button, legend {font-family: 'Ubuntu', sans-serif !important
 	position: relative;
 	top: 1.6rem;
 }
-/** Fix Accessibility radio buttons and checkboxes on table  **/
+/**EOF Fix Accessibility radio buttons and checkboxes on table  **/
 
 /* Scale */
 ul.likert-options-frame {list-style: none;
