Corregidos errores validacion HTML

--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -252,7 +252,19 @@ textarea {resize:none;
 	padding-top: 5px;
 	width: 33% !important;
 	text-align: right !important;
-	
+}
+
+h1.col-sm-9.col-xs-9 > span.inBlock{
+	display: block !important;
+	font-size: inherit;
+	position: initial;
+}
+h1.col-sm-9.col-xs-9 > span.inBlock > span{    
+	display: block;
+    font-size: 0.5em;
+    margin: 0 0 10px;
+    position: static;
+    position: initial;
 }
 
 /*----------------------------------------------*\
