--- a/SurveyTool/WebContent/css/style.css
+++ b/SurveyTool/WebContent/css/style.css
@@ -257,6 +257,7 @@ textarea {resize:none;
 h1.col-sm-9.col-xs-9 > span.inBlock{
 	display: block !important;
 	font-size: inherit;
+	position: static;
 	position: initial;
 }
 h1.col-sm-9.col-xs-9 > span.inBlock > span{    
